--- a/0x04-TypeScript/task_0/tsconfig.json
+++ b/0x04-TypeScript/task_0/tsconfig.json
@@ -3,10 +3,10 @@
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
-    "module": "es6",
+    "module": "node16",
     "target": "es5",
     "allowJs": true,
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "skipLibCheck": true
   }
 }
